# Pipper-Project

./: .gitmodules  README.md
Backend/gateway/: .eslintrc.js  gateway.md  package-lock.json  package.json
Backend/gateway/src/auth/login/: auth.strategy.ts  login.controller.ts  login.guard.ts  login.module.ts  login.service.ts
Backend/gateway/src/auth/login/decorators/: roles.decorator.ts
Backend/gateway/src/auth/login/dto/: login.dto.ts
Backend/gateway/src/auth/login/interfaces/: jwtOPayload.interface.ts
Backend/gateway/src/auth/register/: adminRegister.service.ts  register.controller.ts  register.module.ts  userRegister.service.ts
Backend/gateway/src/auth/register/dto/: register-user.dto.ts
Backend/gateway/src/shared/constants/: constants.ts
Backend/gateway/src/shared/utils/: crypt-utils.service.ts  users-utils.service.ts
Backend/microservices/posts/piperr-framework/: Cargo.toml  setup.sh
Backend/microservices/posts/piperr-framework/scripts/: server_setup.sql
Backend/microservices/posts/piperr-framework/src/: main.rs  routes.rs
Backend/microservices/posts/piperr-framework/src/routes/: delete_post.rs  edit_post.rs  get_post.rs  get_recent_posts.rs  get_user_posts.rs  publish_post.rs  send_reply.rs
Backend/microservices/posts/piperr-framework/src/routes/functions/: get_user.rs  mod.rs
Frontend/: technologies.md
