[package]
name = "piperr-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = "1.0.204"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "macros" ] }

[package.metadata.scripts]
db_create = "bash ./scripts/create_db.sh"
db_start = "docker start sqlx"
db_stop = "docker stop sqlx"
db_remove = "docker rm sqlx"
